fixed word wrap

--- a/source/quartz/styles/base.scss
+++ b/source/quartz/styles/base.scss
@@ -41,7 +41,7 @@ ul,
 .math {
   color: var(--darkgray);
   fill: var(--darkgray);
-  hyphens: auto;
+  // hyphens: auto;
 }
 
 p,
